--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,18 +6,21 @@
   box-sizing: border-box;
 }
 
-.hero {
-  width: 100%;
-  height: 100%;
-  background-color: #37517e;
-}
-
 ul {
   list-style: none;
 }
 
 a {
   text-decoration: none;
+}
+
+.hero {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 60px auto;
+  width: 100%;
+  height: 100dvh;
+  background-color: #37517e;
 }
 
 /*# sourceMappingURL=main.css.map */
