--- a/src/ui/layouts/navbar.module.scss
+++ b/src/ui/layouts/navbar.module.scss
@@ -15,9 +15,8 @@ nav.navbar {
   display: grid;
   grid-template-columns: 20% 80%;
   width: 100%;
-  height: 60px; //should be the exact height of the mobile_menu
-  background-color: colors.$hero;
-  padding: 0rem 6rem;
+  height: 100%;
+  padding: 1rem 6rem;
   position: relative;
 
   @include responsive(phone) {
@@ -46,7 +45,7 @@ nav.navbar {
     width: 100%;
     height: 100dvh;
     left: 0;
-    top: 60px; //should be the exact height of the nav
+    top: 60px;
     padding: 2rem;
     background-color: #222;
     animation: slideIn 0.6s ease-in-out forwards;
@@ -67,14 +66,15 @@ nav.navbar {
     width: 100%;
     color: colors.$white;
     font-family: fonts.$regular;
-    font-size: 0.9375rem;
+    font-size: 1.1rem;
     margin-right: 2rem;
 
     li {
       cursor: pointer;
     }
 
-    li:hover {
+    li:hover,
+    .nav_active {
       color: colors.$accent;
     }
   }
