--- a/src/base/_global.scss
+++ b/src/base/_global.scss
@@ -1,17 +1,11 @@
 @use "../themes/colors";
+@use "../utils/mixins" as *;
 
 .hero {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 60px auto;
+  grid-template-rows: 80px auto;
   width: 100%;
   height: 100dvh;
   background-color: colors.$hero;
-
-  .wrapper {
-    position: fixed;
-    height: max-content;
-    inset: 0;
-    background-color: green;
-  }
 }
